# code-eval-cypris

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: __init__.py  dependencies.py  main.py  models.py  routes.py
docs/: ARCHITECTURE.md  data_engineer_challenge__xml_attribute_extraction.txt  implementation_plan.md
tests/: __init__.py  test_api.py  test_dependencies.py  test_extractor.py  test_parser.py
tests/fixtures/: README.md
tests/fixtures/01_basic_sample/: README.md  input.xml
tests/fixtures/02_priority_ordering/: README.md  input.xml
tests/fixtures/03_multiple_application_refs/: README.md  input.xml
tests/fixtures/04_whitespace_handling/: README.md  input.xml
tests/fixtures/05_missing_format_attribute/: README.md  input.xml
tests/fixtures/06_missing_doc_number_element/: README.md  input.xml
tests/fixtures/07_empty_doc_number/: README.md  input.xml
tests/fixtures/08_no_document_ids/: README.md  input.xml
tests/fixtures/09_minimal_xml/: README.md
tests/fixtures/10_malformed_unclosed_tag/: README.md  input.xml
tests/fixtures/11_malformed_invalid_chars/: README.md  input.xml
tests/fixtures/12_duplicate_doc_numbers/: README.md  input.xml
tests/fixtures/13_large_document/: README.md  input.xml
tests/fixtures/14_special_characters/: README.md  input.xml
xml_extractor/: __init__.py  exceptions.py  extractor.py  parser.py
